fixed overflow of x-axis
added css to html and body

--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+html,body{
+  max-width: 100%;
+  overflow-x: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 body{
     height: 100vh;
     margin: 0;
